# translate

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  NEXT.md  Procfile  README.md  __init__.py  a  build.py  codecov.yaml  createUA.py  data.json  google-batch-test.js  make_docs.py  migrate.py  plugin.md  profiling.anise  pyproject.toml  requirements-dev.txt  requirements-server.txt  requirements.txt  retester.py  run.py  setup.cfg  setup.py  t.py  test.py  text.py
.github/workflows/: build.yml  build_bin.yml  codeql-analysis.yml  codeql.yml  pylint.yml  pypi.yml  pytest.yml  test.yml  vermin.yml
.translatepy/config/: tui
.translatepy/sessions/: bing.cain  papago.cain
assets/: README.md
assets/Design Banner/: Design Banner.fig  README.md
assets/Social Banner/: README.md  Social Banner.fig
data/: _alpha2_to_alpha3.json  _languages_code.json  _languages_to_international.json  data.py
docs/: README.md
docs/API Documentation/: README.md
docs/CLI Usage/: README.md  Server.md
docs/English/: README.md
docs/Français/: README.md
docs/Python Documentation/: Plugins.md
docs/eng/: README.md
docs/日本語/: README.md
models/: exceptions.py  languages.py  userAgents.py
playground/: a.py  add  batchexecute.py  bing.html  builtin_translators_vectors.py  clean.py  filter.py  google-batch.js  iso639.csv  json_storager.py  lru.py  memory.py  profile.anise  results.py  revectorize.py  schema.json  test_translator.py  translate  translation_results.json  tts  vectors_results.json
playground/backup/: _language_data.py
playground/gtranslate/: batchexecute.ts  token.ts
playground/language/: BING_RESULTS.json  CODES_RESULTS.json  DEEPL_RESULTS.json  GOOGLE_RESULTS.json  LANGUAGES_RESULTS.json  REVERSO_RESULTS.json  VECTORS_RESULTS.json  YANDEX_RESULTS.json  data.json  export_csv_iso639_table.py  iso.json  iso639_2.csv  language.py  save.py  v.json
playground/plugins/: .gitignore  LICENSE  README.md  pyproject.toml
playground/plugins/.github/workflows/: codeql.yml  pylint.yml  test.yml  vermin.yml
playground/plugins/plugins/: README.md  __info__.py  __init__.py  plugins.py
playground/server/: endpoints.py  server.py
scripts/: build_nuitka_linux.sh
server/: README.md  db.py  exceptions.py  run.py
server/docs/: Getting Started.md
server/endpoints/: README.md  stars.py  stats.py  translation.py
server/schemas/: README.md  client.py  errors.py  granular.py  stars.py  timings.py  types.py
server/stats/: errors.py  timings.py
tests/: a.txt  batchexecute.py  test_importer.py  test_language.py  test_translate.py  test_translators.py
translatepy/: README.md  __info__.py  __init__.py  __main__.py  exceptions.py  language.py  models.py  requirements.txt  translate.py
translatepy/cli/: README.md
translatepy/data/: README.md  _google_translate_domains.json  _languages_name_to_code_en.json  _languages_name_to_code_international.json  data.py
translatepy/models/: languages.py  userAgents.json  userAgents.py
translatepy/server/: README.md  language.py  server.py  translation.py
translatepy/translators/: README.md  __init__.py  base.py  base_aggregator.py  bing.py  deepl.py  deepl_old.py  example  google.py  libre.py  microsoft.py  mymemory.py  new_base.py  papago.py  pons.py  promt.py  qcri.py  reverso.py  translatecom.py  unselected.py  yandex.py
translatepy/utils/: README.md  __init__.py  audio.py  (+17 more)
translators/: bing.py  google.py  reverso.py  yandex.py
utils/: similarity.py
website/: README.md  bun.lockb  config.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+394 files in other folders)
