[tool.poetry]
name = "plugins"
version = "1.0rc1"
description = "translatepy implementation for plugins"
license = "MIT License"
authors = ["Animenosekai"]
maintainers = ["Animenosekai"]
readme = "README.md"
repository = "https://github.com/Animenosekai/plugins"
documentation = "https://github.com/Animenosekai/plugins/blob/main/README.md"
keywords = [
    "language",
    "translatepy",
    "plugins",
]
classifiers = [
    # Status
    "Development Status :: 4 - Beta",

    # Environment
    "Environment :: Console",

    # Audience
    "Intended Audience :: Developers",

    # Licensing
    "License :: OSI Approved :: MIT License",

    # Software Requirements
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",

    # Topics
    "Topic :: Software Development :: Localization",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",

    # Code quality
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10"
translatepy = "^3.0"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/Animenosekai/plugins/issues"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
autopep8 = "^2.0.2"
isort = "^5.12"
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
